--- a/index.html
+++ b/index.html
@@ -138,6 +138,59 @@
             </div>
         </section>
     </article>
+    <article id="faq">
+        <section>
+            <div>
+                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. Please read the FAQ before trying them.</aside>
+                <div>
+                    <section class="main">
+                        <h1><abbr title="Frequently Asked Questions">FAQ</abbr></h1>
+
+                        <h2 id="faq-what-is-scratchx">What is ScratchX?</h2>
+                        <p>ScratchX is a platform that enables people to test experimental functionality built by developers for the visual programming language Scratch.</p>
+
+                        <h2 id="faq-scratch-vs-scratchx">What's the difference between Scratch and ScratchX?</h2>
+                        <p><a href="https://scratch.mit.edu/">Scratch</a> is a programming language and online community where you can create your own interactive stories, games, and animations. ScratchX is a separate experimental platform built to test experimental Scratch features, also known as Experimental Extensions. There is no login or community component to ScratchX, and projects created within ScratchX can only be run on ScratchX.</p>
+
+                        <h2 id="faq-scratch-extensions">What are Scratch Extensions?</h2>
+                        <p>Scratch extensions make it possible for Scratch to interface with external hardware and information outside of the Scratch website through new blocks. Extensions  are written in JavaScript for the ScratchX project editor.</p>
+
+                        <h2 id="faq-expermintal-official">What is the difference between Experimental and Official Extensions?</h2>
+                        <p>Experimental Extensions are extensions created for Scratch by the community; they are not managed or endorsed by Scratch in any way. Experimental Extensions can run only in the ScratchX environment. Official Extensions can be found and run from within Scratch 2.0 (both <a href="https://scratch.mit.edu">online</a> and <a href="https://scratch.mit.edu/scratch2download/">offline</a> editors), accessible in the 'More Blocks' section of the blocks menu.</p>
+
+                        <h2 id="faq-experimental-safe">Are Experimental Extensions safe?</h2>
+                        <p>The Scratch Team has created ScratchX to enable people to create and test Experimental Extensions. However, the Scratch Team does not endorse, support or maintain specific Experimental Extensions. People using Experimental Extensions should be careful not to provide any personal details such as login passwords or personally-identifiable information if prompted by an Experimental Extension.</p>
+
+                        <h2 id="faq-how-to-use-scratchx">How do I use ScratchX?</h2>
+                        <p>There are three pathways into ScratchX. If you have been given or sent a .sbx file, you can load that into ScratchX via the homepage (look for 'Open an Extension File'). If you have been sent a ScratchX URL (starts with 'scratchx.org/'), you can click your link and the extension will load automatically, or you can enter that URL into the box on the homepage (look for 'Open an Extension URL'). Lastly, if you don't have an example extension, you can try out one on the site by clicking on a Featured Experimental Extension on the homepage (look for 'Featured Extensions').</p>
+
+                        <h2 id="faq-how-to-share">I made a cool project on ScratchX. How do I share it?</h2>
+                        <p>Click the 'Save' button at the top of the page to download your project as an .sbx file on to your local computer. You can then send this file to other people, and they can upload your file onto ScratchX to play with your project.</p>
+
+                        <h2 id="faq-examples">Where can I find example Experimental Extensions to play around with?</h2>
+                        <p>We have linked to a few example extensions on the <a href="#home" data-action="static-link">ScratchX</a> homepage. We plan to highlight additional extensions in the coming months.</p>
+
+                        <h2 id="faq-open-sbx">Why can't I open .sbx files in Scratch 2.0 or the offline editor?</h2>
+                        <p>Experimental Extensions are extensions created for Scratch by the community and are not managed or endorsed by Scratch in any way. Because of this, we do not allow Experimental Extensions to run on the larger Scratch site.</p>
+                    </section>
+                    <nav>
+                        <h3>Contents</h3>
+                        <ol>
+                            <li><a href="#faq-what-is-scratchx">What is ScratchX?</a></li>
+                            <li><a href="#faq-scratch-vs-scratchx">What's the difference between Scratch and ScratchX?</a></li>
+                            <li><a href="#faq-scratch-extensions">What are Scratch Extensions?</a></li>
+                            <li><a href="#faq-expermintal-official">What is the difference between Experimental and Official Extensions?</a></li>
+                            <li><a href="#faq-experimental-safe">Are Experimental Extensions safe?</a></li>
+                            <li><a href="#faq-how-to-use-scratchx">How do I use ScratchX?</a></li>
+                            <li><a href="#faq-how-to-share">I made a cool project on ScratchX. How do I share it?</a></li>
+                            <li><a href="#faq-examples">Where can I find example Experimental Extensions to play around with?</a></li>
+                            <li><a href="#faq-open-sbx">Why can't I open .sbx files in Scratch 2.0 or the offline editor?</a></li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </section>
+    </article>
     <footer>
         <div>
             <section>
@@ -155,7 +208,7 @@
                     <li><a href="https://scratch.mit.edu/terms_of_use/">Terms of Service</a></li>
                     <li><a href="#privacy-policy" data-action="static-link">Privacy Policy</a></li>
                     <li><a href="mailto:scratch-extensions@media.mit.edu">Contact Us</a></li>
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="#faq" data-action="static-link">FAQ</a></li>
                     <li><a href="https://scratch.mit.edu/discuss/41/">Forums</a></li>
                 </ul>
             </nav>
