Take a not so serious crack at short URLs

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     <div class="scratch_loading"></div>
 </section>
 <script type="text/javascript" src="libs/base64ab.js"></script>
+<script type="text/javascript" src="libs/lz-string.min.js"></script>
 <script type="text/javascript" src="scratch_extensions/scratch_ext.js"></script>
 <script type="text/javascript" src="js/scratchx.js"></script>
 </body>
