Update and link to FAQ

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <article id="home">
         <header>
             <div>
-                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. Please read the FAQ before trying them.</aside>
+                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. <a href="#faq" data-action="static-link">Please read the FAQ before trying them.</a></aside>
 
                 <h1>About ScratchX</h1>
                 <p>
@@ -38,7 +38,7 @@
                         <section>
                             <h2>Open an Extension File</h2>
                             <p>Choose a .sbx file from your local drive</p>
-                            <p><a href="">What is a .sbx file?</a></p>
+                            <p><a href="#faq-sbx-file" data-action="static-link">What is a .sbx file?</a></p>
                         </section>
                         <section>
                             <button data-action="load-file">Browse for local file</button>
@@ -49,7 +49,7 @@
                         <section>
                             <h2>Open an Extension URL</h2>
                             <p>Paste the web address below</p>
-                            <p><a href="">What is a ScratchX URL?</a></p>
+                            <p><a href="#faq-scratchx-url" data-action="static-link">What is a ScratchX URL?</a></p>
                         </section>
                         <section>
                             <form class="input-plus-button url-load-form">
@@ -102,7 +102,7 @@
     <article id="privacy-policy">
         <section>
             <div>
-                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. Please read the FAQ before trying them.</aside>
+                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. <a href="#faq" data-action="static-link">Please read the FAQ before trying them.</a></aside>
                 <div>
                     <section class="main">
                         <h1>Privacy Policy</h1>
@@ -141,7 +141,7 @@
     <article id="faq">
         <section>
             <div>
-                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. Please read the FAQ before trying them.</aside>
+                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. <a href="#faq" data-action="static-link">Please read the FAQ before trying them.</a></aside>
                 <div>
                     <section class="main">
                         <h1><abbr title="Frequently Asked Questions">FAQ</abbr></h1>
@@ -170,6 +170,13 @@
                         <h2 id="faq-examples">Where can I find example Experimental Extensions to play around with?</h2>
                         <p>We have linked to a few example extensions on the <a href="#home" data-action="static-link">ScratchX</a> homepage. We plan to highlight additional extensions in the coming months.</p>
 
+                        <h2 id="faq-scratchx-url">What is a ScratchX URL?</h2>
+                        <p>Developers who make extensions for ScratchX can choose to create a custom web address or URL that points to their extension and/or demo project. Clicking on a ScratchX extension URL will take you directly to a project with an extension loaded.</p>
+
+                        <h2 id="faq-sbx-file">What is an .sbx file?</h2>
+                        <p>The SBX (.sbx) ScratchX file format is the file format used to encode ScratchX projects when they are downloaded to a user's computer. SBX files can only be used on the ScratchX site. Other Scratch environments use different formats, including the .sb2 format for Scratch 2.0 (read more here) and .sb format for Scratch 1.4 (read more here).</p>
+
+
                         <h2 id="faq-open-sbx">Why can't I open .sbx files in Scratch 2.0 or the offline editor?</h2>
                         <p>Experimental Extensions are extensions created for Scratch by the community and are not managed or endorsed by Scratch in any way. Because of this, we do not allow Experimental Extensions to run on the larger Scratch site.</p>
                     </section>
@@ -184,6 +191,8 @@
                             <li><a href="#faq-how-to-use-scratchx">How do I use ScratchX?</a></li>
                             <li><a href="#faq-how-to-share">I made a cool project on ScratchX. How do I share it?</a></li>
                             <li><a href="#faq-examples">Where can I find example Experimental Extensions to play around with?</a></li>
+                            <li><a href="#faq-scratchx-url">What is a ScratchX URL?</a></li>
+                            <li><a href="#faq-sbx-file">What is an .sbx file?</a></li>
                             <li><a href="#faq-open-sbx">Why can't I open .sbx files in Scratch 2.0 or the offline editor?</a></li>
                         </ol>
                     </nav>
