Add link to hardware plugin

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <dialog open class="extension-feature">
                         <section>
                             <h2>Featured Extensions</h2>
-                            <p><a href="">Download hardware plugin</a></p>
+                            <p><a href="https://scratch.mit.edu/scratchr2/static/ext/download.html">Download hardware plugin</a></p>
                         </section>
                         <section>
                             <ul>
@@ -84,7 +84,7 @@
                 </section>
 
                 <aside class="info">
-                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="">Hardware Plugin</a>.
+                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="https://scratch.mit.edu/scratchr2/static/ext/download.html">Hardware Plugin</a>.
                 </aside>
 
                 <aside class="info">
