SWF nearly feature complete, fixed HTML for plugin

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
     <div class="scratch_loading"></div>
 </section>
+<span id="scratch"><!--plugin container--></span>
 <script type="text/javascript" src="libs/base64ab.js"></script>
 <script type="text/javascript" src="libs/lz-string.min.js"></script>
 <script type="text/javascript" src="scratch_extensions/scratch_ext.js"></script>
