Rename swf object id back to scratch

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
     </footer>
 </main>
-<section id="editor">
+<section id="scratch">
     <div class="scratch_unsupported">
         <p>
             Oh Noes! Scratch project cannot display.<br/>
@@ -248,7 +248,6 @@
     </div>
     <div class="scratch_loading"></div>
 </section>
-<span id="scratch"><!--plugin container--></span>
 <script type="text/javascript" src="libs/base64ab.js"></script>
 <script type="text/javascript" src="libs/lz-string.min.js"></script>
 <script type="text/javascript" src="scratch_extensions/scratch_ext.js"></script>
