Tweaks with @carljbowman

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <div>
                 <h2>Developer Documentation</h2>
                 <p>Developers can create new Experimental Extensions using Javascript. To learn more, read the <a href="http://llk.github.io/scratch-extension-docs/">Developer Documentation</a>.</p>
+                <p><a href="#scratch" data-action="static-link"><button>Open editor</button></a></p>
             </div>
         </section>
     </article>
