Combine homepage info dialogs

--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
                 </section>
 
                 <aside class="info">
-                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="https://scratch.mit.edu/scratchr2/static/ext/download.html">Hardware Plugin</a>.
-                </aside>
-
-                <aside class="info">
+                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="https://scratch.mit.edu/scratchr2/static/ext/download.html">Hardware Plugin</a>.<br />
                     Official Scratch Extensions (such as LEGO WeDo) are available on the main <a href="https://scratch.mit.edu">Scratch site</a>.
                 </aside>
             </div>
