Feature Text-to-Speech and Mesh extensions

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                         </section>
                         <section>
                             <ul>
-                                <li><a href="?url=./scratch_extensions/picoExtension.js" data-action="load-url">
-                                    <h3>Extension 1</h3>
-                                    <p>Extension 1 description</p>
+                                <li><a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
+                                    <h3>Text to Speech</h3>
+                                    <p>Extension using the JavaScript Speech API for text to speech</p>
                                 </a></li>
-                                <li><a href="?url=./scratch_extensions/picoExtension.js"  data-action="load-url">
-                                    <h3>Extension 2</h3>
-                                    <p>Extension 2 description</p>
+                                <li><a href="?url=http://technoboy10.github.io/mesh/mesh.js"  data-action="load-url">
+                                    <h3>Mesh</h3>
+                                    <p>Mesh description</p>
                                 </a></li>
                                 <li><a href="?url=./scratch_extensions/picoExtension.js"  data-action="load-url">
                                     <h3>Extension 3</h3>
