Feature Arduino extension

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                                     <h3>Mesh</h3>
                                     <p>Mesh description</p>
                                 </a></li>
-                                <li><a href="?url=./scratch_extensions/picoExtension.js"  data-action="load-url">
-                                    <h3>Extension 3</h3>
-                                    <p>Extension 3 description</p>
+                                <li><a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js"  data-action="load-url">
+                                    <h3>Arduino</h3>
+                                    <p>Arduino description</p>
                                 </a></li>
                             </ul>
                         </section>
