Fit descriptions to one line

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                             <ul>
                                 <li><a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
                                     <h3>Text to Speech</h3>
-                                    <p>Extension using the JavaScript Speech API for text to speech</p>
+                                    <p>Use Scratch to read text out loud</p>
                                 </a></li>
                                 <li><a href="?url=http://technoboy10.github.io/mesh/mesh.js"  data-action="load-url">
                                     <h3>Mesh</h3>
-                                    <p>Mesh description</p>
+                                    <p>Communicate across projects</p>
                                 </a></li>
                                 <li><a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js"  data-action="load-url">
                                     <h3>Arduino</h3>
-                                    <p>Arduino description</p>
+                                    <p>Control your Arduino using Scratch</p>
                                 </a></li>
                             </ul>
                         </section>
