Lowercase ScratchX home

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <p>Content on this site is <strong>not</strong> a product of the Scratch Team. Please use caution when using publically created extensions. <a href="#faq">Learn More</a></p>
 </section>
 <section>
-<button data-action="show" data-target="#home">Back to ScratchX Home</button>
+<button data-action="show" data-target="#home">Back to ScratchX home</button>
 <button class="success">I understand, continue</button>
 </section>
 </div>
