Adjust async/defer for script ordering

--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
 </dialog>
 </script>
 <script type="text/javascript" src="libs/base64ab.js" async></script>
-<script type="text/javascript" src="libs/swfobject.js" defer></script>
-<script type="text/javascript" src="libs/jquery-1.11.2.min.js" defer></script>
+<script type="text/javascript" src="libs/swfobject.js"></script>
+<script type="text/javascript" src="libs/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="libs/underscore-min.js" async></script>
-<script type="text/javascript" src="libs/ZeroClipboard.min.js" defer></script>
-<script type="text/javascript" src="scratch_extensions/scratch_ext.js" async></script>
-<script type="text/javascript" src="js/scratchx.js" async defer></script>
+<script type="text/javascript" src="libs/ZeroClipboard.min.js" async></script>
+<script type="text/javascript" src="scratch_extensions/scratch_ext.js" defer></script>
+<script type="text/javascript" src="js/scratchx.js" defer></script>
 </body>
 </html>
