Fix top nav links
Oops! Thanks @Rumanti! Fixes #16

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             Related Sites:
             <ul>
                 <li><a href="https://scratch.mit.edu/">Scratch</a></li>
-                <li><a href="https://scratch.mit.edu/">ScratchEd</a></li>
-                <li><a href="https://scratch.mit.edu/">ScratchJr</a></li>
+                <li><a href="http://scratched.gse.harvard.edu">ScratchEd</a></li>
+                <li><a href="http://www.scratchjr.org/">ScratchJr</a></li>
             </ul>
             </nav>
         </div>
