--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <p><a href="https://scratch.mit.edu/">Scratch</a> is a project of the Lifelong Kindergarten Group at the MIT Media Lab.</p>
                 <p>
                     <a class="twitter" title="Follow us on Twitter" href="https://twitter.com/scratch/" target="_blank"><span>@scratch on Twitter</span></a>
-                    <a class="github" title="Fork us on GitHub" href="https://github.com/LLK/" target="_blank"><span>LLK on GitHub</span></a>
+                    <a class="github" title="Fork us on GitHub" href="https://github.com/LLK/scratchx/" target="_blank"><span>LLK on GitHub</span></a>
                 </p>
             </section>
 
