--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
     </section>
 </dialog>
 </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-30688952-3', 'auto');
+  ga('send', 'pageview', 'home');
+</script>
 <script type="text/javascript" src="libs/base64ab.js" async></script>
 <script type="text/javascript" src="libs/swfobject.js"></script>
 <script type="text/javascript" src="libs/jquery-1.11.2.min.js"></script>
