Update copy to be more accurate. Fixes #19

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
                 <h1>About ScratchX</h1>
                 <p>
-                    ScratchX allows you to try out experimental extensions to the Scratch programming environment. With extensions, you can connect Scratch to the physical world (such as electronic devices and kits) and online resources (including web data and web services). 
+                    ScratchX allows you to try out experimental extensions to the Scratch programming environment. With extensions, you can connect Scratch to the physical world (such as electronic devices and robotics) and online resources (including web data and web services). 
                 </p>
 
                 <section id="dialogs">
                     <dialog open class="extension-file">
                         <section>
-                            <h2>Open an Extension File</h2>
+                            <h2>Open an Extension Project</h2>
                             <p>Choose a .sbx file from your local drive</p>
                             <p><a href="#faq-sbx-file">What is a .sbx file?</a></p>
                         </section>
@@ -158,7 +158,7 @@
                         <p>The Scratch Team has created ScratchX to enable people to create and test Experimental Extensions. However, the Scratch Team does not endorse, support or maintain specific Experimental Extensions. People using Experimental Extensions should be careful not to provide any personal details such as login passwords or personally-identifiable information if prompted by an Experimental Extension.</p>
 
                         <h2 id="faq-how-to-use-scratchx">How do I use ScratchX?</h2>
-                        <p>There are three pathways into ScratchX. If you have been given or sent a .sbx file, you can load that into ScratchX via the homepage (look for 'Open an Extension File'). If you have been sent a ScratchX URL (starts with 'scratchx.org/'), you can click your link and the extension will load automatically, or you can enter that URL into the box on the homepage (look for 'Open an Extension URL'). Lastly, if you don't have an example extension, you can try out one on the site by clicking on a Featured Experimental Extension on the homepage (look for 'Featured Extensions').</p>
+                        <p>There are three pathways into ScratchX. If you have been given or sent a .sbx file, you can load that into ScratchX via the homepage (look for 'Open an Extension Project'). If you have been sent a ScratchX URL (starts with 'scratchx.org/'), you can click your link and the extension will load automatically, or you can enter that URL into the box on the homepage (look for 'Open an Extension URL'). Lastly, if you don't have an example extension, you can try out one on the site by clicking on a Featured Experimental Extension on the homepage (look for 'Featured Extensions').</p>
 
                         <h2 id="faq-how-to-share">I made a cool project on ScratchX. How do I share it?</h2>
                         <p>Click the 'Save' button at the top of the page to download your project as an .sbx file on to your local computer. You can then send this file to other people, and they can upload your file onto ScratchX to play with your project.</p>
@@ -249,7 +249,8 @@
     <header><a class="modal-close" href="#"></a></header>
     <section class="warning">
         <h2>Warning: all extensions are experimental</h2>
-        <p>Content on this site is <strong>not</strong> a product of the Scratch Team. Please use caution when using publically created extensions. <a href="#faq">Learn More</a></p>
+        <p><strong>Warning:</strong> The extensions on this site are experimental</p>
+        <p>The Scratch Team is <strong>not</strong> responsible for the extensions and projects on this site. Please use caution when using these extensions. <a href="#faq">Learn More.</a></p>
     </section>
     <section>
         <button data-action="show" data-target="home">Back to ScratchX home</button>
