Update forum link. Closes #15

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <li><a href="#privacy-policy">Privacy Policy</a></li>
                     <li><a href="mailto:scratch-extensions@media.mit.edu">Contact Us</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <li><a href="https://scratch.mit.edu/discuss/41/">Forums</a></li>
+                    <li><a href="https://scratch.mit.edu/discuss/48/">Forum</a></li>
                 </ul>
             </nav>
 
