Change link to documentation to the wiki. Fix #20

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section>
             <div>
                 <h2>Developer Documentation</h2>
-                <p>Developers can create new Experimental Extensions using Javascript. To learn more, read the <a href="http://llk.github.io/scratch-extension-docs/">Developer Documentation</a>.</p>
+                <p>Developers can create new Experimental Extensions using Javascript. To learn more, read the <a href="https://github.com/LLK/scratchx/wiki">Developer Documentation</a>.</p>
                 <p><a href="#scratch"><button>Open editor</button></a></p>
             </div>
         </section>
