Fix mailto: link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div>
                     <section class="main">
                         <h1>Privacy Policy</h1>
-                        <p id="privacy-introduction">ScratchX is a platform that enables people to test experimental functionality built by developers for the visual programming language <a href="http://scratch.mit.edu">Scratch</a>. The purpose of this website is to provide a playground for people to test experimental content. We wrote this privacy policy to explain what information we access and how we use it. If you have any questions regarding this policy, you can <a href="scratch-extensions@scratch.mit.edu">contact us</a>.</p>
+                        <p id="privacy-introduction">ScratchX is a platform that enables people to test experimental functionality built by developers for the visual programming language <a href="http://scratch.mit.edu">Scratch</a>. The purpose of this website is to provide a playground for people to test experimental content. We wrote this privacy policy to explain what information we access and how we use it. If you have any questions regarding this policy, you can <a href="mailto:scratch-extensions@scratch.mit.edu">contact us</a>.</p>
                         
 
                         <h2 id="privacy-external-services">External Services</h2>
