Updated browser plugin link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </section>
 
                 <aside class="info message">
-                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="https://scratch.mit.edu/scratchr2/static/ext/download.html">Hardware Plugin</a>.<br />
+                    <strong>Note:</strong> To use any physical extensions, you need to download the <a href="https://scratch.mit.edu/info/ext_download/">Hardware Plugin</a>.<br />
                     Official Scratch Extensions (such as LEGO WeDo) are available on the main <a href="https://scratch.mit.edu">Scratch site</a>.
                 </aside>
             </div>
